samples/_failures_safe/1761615079_1ef9f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80c26cbf.c: In function ‘main’:
./samples/SAFE/__tmp_80c26cbf.c:147:18: error: expected ‘)’ at end of input
  147 |         if (rows2
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_80c26cbf.c:147:9: error: expected declaration or statement at end of input
  147 |         if (rows2
      |         ^~
./samples/SAFE/__tmp_80c26cbf.c:147:9: error: expected declaration or statement at end of input
